# eavesdrop

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
.github/workflows/: tests.yml
demo/sessions/: aaaa0001-0000-0000-0000-000000000001.jsonl  bbbb0002-0000-0000-0000-000000000002.jsonl.reset.2026-02-10T09-15-00  cccc0003-0000-0000-0000-000000000003.jsonl  dddd0004-0000-0000-0000-000000000004.jsonl  eeee0005-0000-0000-0000-000000000005.jsonl.reset.2026-03-01T14-22-00
eavesdrop/: __main__.py  app.py  cron_parser.py  parser.py
eavesdrop/widgets/: conversation.py  cron_browser.py  file_browser.py  turn.py
tests/: test_app.py  test_copy.py  test_cron_browser.py  test_cron_parser.py  test_file_browser.py  test_final_block.py  test_follow.py  test_parser.py  test_permissions.py  test_search.py  test_turn_separator.py  test_turn_toggle.py
