[project]
name = "eavesdrop"
version = "0.1.0"
description = "TUI for browsing openclaw session JSONL files"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
eavesdrop = "eavesdrop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
