[project]
name = "eavesdrop"
version = "0.1.0"
description = "TUI for browsing openclaw session JSONL files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "ramnat" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
eavesdrop = "eavesdrop.__main__:main"

[project.urls]
Homepage = "https://github.com/ram-nat/eavesdrop"
Repository = "https://github.com/ram-nat/eavesdrop"
Issues = "https://github.com/ram-nat/eavesdrop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
